# sqe

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.full  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  cliff.toml  deny.toml  docker-compose.bench-2w.yml  docker-compose.bench-4w.yml  docker-compose.compare.yml  docker-compose.distributed.yml  docker-compose.hms.yml  docker-compose.nessie.yml  docker-compose.observability.yml  docker-compose.parity.yml  docker-compose.spark.yml  docker-compose.tempto.yml  docker-compose.test.yml  docker-compose.unity.yml  log.txt  log2.txt  log3.txt  log4.txt  log6.txt  log7.txt  log8.txt  nextsteps.md  release.md  (+1 more)
adapters/dbt-sqe/: README.md  setup.cfg
adapters/dbt-sqe/tests/: test_auth.py
crates/sqe-auth/: Cargo.toml
crates/sqe-auth/src/: anonymous.rs  api_key.rs  auth_code.rs  authenticator.rs  aws_iam.rs  bearer_passthrough.rs  bearer_token.rs  chain.rs  device_code.rs  factory.rs  keycloak.rs  lib.rs  mtls.rs  oauth.rs  oidc_client_credentials.rs  oidc_discovery.rs  oidc_m2m.rs  oidc_password.rs  oidc_provider.rs  pending_auth.rs  per_catalog.rs  provider.rs  token_cache.rs  token_exchange.rs
crates/sqe-ballista/: Cargo.toml
crates/sqe-ballista-poc/: Cargo.toml
crates/sqe-ballista-poc/src/: codec.rs  main.rs
crates/sqe-ballista/src/: auth_ext.rs  cluster.rs  codec.rs  facade.rs  lib.rs  sqe_codec.rs
crates/sqe-bench/: Cargo.toml
crates/sqe-bench/src/: cli.rs  compare.rs  comparison.rs  lib.rs  load.rs  main.rs  report.rs  test.rs
crates/sqe-bench/tests/: generate_parallel.rs
crates/sqe-catalog/: Cargo.toml
crates/sqe-catalog/src/: access_control.rs  aws_config.rs  catalog_provider.rs  circuit_breaker.rs  credential_vending.rs  expr_to_predicate.rs  file_tvf_common.rs  footer_cache.rs  grant_chameleon.rs  hf_tree_cache.rs  iceberg_metadata_tvf.rs  iceberg_scan.rs  incremental_provider.rs  incremental_scan.rs  info_schema.rs  late_materialize.rs  lazy_object_store.rs  lib.rs  manifest_cache.rs  mount.rs  parquet_writer_config.rs  pruning_stats.rs  puffin_stats.rs  read_csv.rs  read_delta.rs  read_json.rs  read_parquet.rs  rest_catalog.rs  runtime_bridge.rs  s3_io.rs  scan_memory.rs  schema_provider.rs  sort_order.rs  system_catalog.rs  system_jdbc.rs  system_metadata.rs  system_runtime.rs  table_provider.rs  topk.rs  writable_iceberg_catalog.rs
crates/sqe-catalog/tests/: aws_config_test.rs  backends_integration.rs  bloom_probe_369.rs  concurrent_bearer_test.rs  mount_glue_test.rs  mount_hms_test.rs  mount_rest_test.rs  mount_s3tables_test.rs  mount_sqlite_test.rs  trino_colname_compat.rs  trino_row_compat.rs
crates/sqe-cli/: Cargo.toml
crates/sqe-cli/src/: client.rs  display.rs  dotcommands.rs  embedded.rs  flight.rs  http.rs  main.rs  script.rs  writable_iceberg_catalog.rs
crates/sqe-cli/tests/: cli_smoke.rs
crates/sqe-coordinator/: Cargo.toml
crates/sqe-coordinator/src/: adaptive_sort.rs  audit_resources.rs  audit_tag_adapter.rs  auth_session.rs  catalog_ops.rs  channel_pool.rs  codec.rs  credential_refresh.rs  dim_build_swap.rs  distributed_scan.rs  explain.rs  flight_sql.rs  flight_sql_helpers.rs  lib.rs  main.rs  maintenance.rs  memory.rs  merge_sql.rs  merge_target_provider.rs  metrics_history.rs  mode.rs  parallel_probe_scan.rs  parallel_scan.rs  policy_wiring.rs  quack_executor.rs  query_cache.rs  query_handler.rs  query_registry.rs  query_tracker.rs  rate_limiter.rs  runtime.rs  runtime_catalog.rs  scan_pushdown.rs  scheduler.rs  session_context.rs  session_manager.rs  streaming.rs  suggest_bloom.rs  tag_source_impl.rs  tls.rs  (+9 more)
crates/sqe-coordinator/tests/: attach_dispatch_test.rs  attach_rest_test.rs  audit_e2e_test.rs  catalog_discovery_test.rs  equality_delete_integration.rs  in_subquery_or_stack_overflow.rs  in_subquery_view_rewrite.rs  incremental_scan_e2e.rs  integration_test.rs  maintenance_procedures_test.rs  multi_catalog_routing_test.rs  partition_e2e.rs  partition_evolution_e2e.rs  quack_e2e.rs  rewrite_data_files_real.rs  runtime_catalog_test.rs  sql_compat_test.rs  trino_udf_test.rs  v3_e2e.rs  v3_types_integration.rs
crates/sqe-core/: Cargo.toml
crates/sqe-core/src/: config.rs  error.rs  lib.rs  secret.rs  secret_string.rs  session.rs  sql_params.rs  supervised_task.rs  table_properties.rs
crates/sqe-lineage/: Cargo.toml
crates/sqe-lineage/src/: emitter.rs  event.rs  lib.rs  observer.rs  sink.rs
crates/sqe-lineage/tests/: emit_pipeline_test.rs  emitter_test.rs  event_serialise_test.rs  extract_columns_test.rs  extract_datasets_test.rs  extract_hint_test.rs  extract_lineage_ctas_test.rs  extract_lineage_test.rs  extract_outputs_test.rs  lineage_ctas_emit_test.rs  observer_test.rs  sink_multi_test.rs  sinks_file_test.rs  sinks_http_test.rs  sinks_spool_test.rs
crates/sqe-metrics/: Cargo.toml
crates/sqe-metrics/src/: audit.rs  lib.rs  otel.rs  propagation.rs  server.rs
crates/sqe-planner/: Cargo.toml
crates/sqe-planner/src/: distributed_aggregate.rs  distributed_join.rs  distributed_sort.rs  join_strategy.rs  lib.rs  predicate_transfer.rs  scan_task.rs  shuffle_exec.rs  single_distinct_count.rs  splitter.rs  stage_planner.rs  star_schema_reorder.rs  stats.rs
crates/sqe-policy/: Cargo.toml
crates/sqe-policy/src/: lib.rs  mask_udf.rs  opa.rs  plan_rewriter.rs  policy_breaker.rs  policy_expr.rs  policy_store.rs  ranger_store.rs  session_udf.rs  sha256_udf.rs  tag_source.rs  write_predicates.rs
crates/sqe-policy/tests/: opa_wiremock.rs  ranger_grants_wiremock.rs  ranger_store_wiremock.rs  rewriter_integration.rs  security_test.rs  view_bypass_policy.rs
crates/sqe-quack-client/: Cargo.toml
crates/sqe-quack-client/src/: client.rs  lib.rs  tableprovider.rs  tvf.rs
crates/sqe-quack-server/: Cargo.toml
crates/sqe-quack-wire/: Cargo.toml
crates/sqe-sql/: Cargo.toml
crates/sqe-trino-compat/: Cargo.toml
crates/sqe-trino-functions/: Cargo.toml
crates/sqe-worker/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs  matrix_report.rs
(+2576 files in other folders)
