[workspace]
resolver = "2"
members = [
    "crates/sqe-core",
    "crates/sqe-auth",
    "crates/sqe-catalog",
    "crates/sqe-sql",
    "crates/sqe-policy",
    "crates/sqe-planner",
    "crates/sqe-coordinator",
    "crates/sqe-worker",
    "crates/sqe-trino-compat",
    "crates/sqe-metrics",
    "crates/sqe-cli",
    "crates/sqe-bench",
]

[workspace.dependencies]
# Query engine — DataFusion 52 with iceberg-rust 0.9 compatibility
datafusion = "52"
datafusion-common = "52"
datafusion-expr = "52"
datafusion-sql = "52"
datafusion-proto = "52"

# Arrow — arrow 57 aligns with DataFusion 52, iceberg-rust 0.9, and parquet 57
arrow = { version = "57", features = ["prettyprint"] }
arrow-flight = { version = "57", features = ["flight-sql-experimental"] }
arrow-schema = "57"
arrow-array = "57"
parquet = { version = "57", features = ["async", "object_store"] }
object_store = { version = "0.12", features = ["aws"] }

# Iceberg — RisingWave fork for rewrite_files() / overwrite_files() transaction support.
# Upstream apache/iceberg-rust 0.9 lacks OverwriteAction/RewriteFilesAction.
# Pin to known-good rev used by nimtable/iceberg-compaction in production.
# Note: iceberg-storage-opendal is folded into the core `iceberg` crate in this fork.
iceberg = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "1978911ec4" }
iceberg-catalog-rest = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "1978911ec4" }
iceberg-datafusion = { git = "https://github.com/risingwavelabs/iceberg-rust.git", rev = "1978911ec4" }

# SQL parser — DataFusion 52 ships sqlparser 0.53
sqlparser = "0.53"

# JSON functions for DataFusion (Trino json_extract compat)
datafusion-functions-json = "0.52"

# Async — use only what is needed; avoid ["full"] which includes fs/process/io-std
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "fs"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# gRPC (Arrow Flight) — arrow-flight 57 requires tonic 0.14
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Concurrency / Caching
dashmap = "6"
moka = { version = "0.12", features = ["future", "sync"] }

# Rate limiting
governor = "0.8"

# Auth
jsonwebtoken = "9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Data generation
csv = "1"
rand = "0.8"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Misc
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
bytes = "1"

# Unicode normalization for Trino normalize() function
unicode-normalization = "0.1"
# Stemming for Trino word_stem() function
rust-stemmers = "1"
# Timezone support for with_timezone/at_timezone
chrono-tz = "0.10"
# Regex for Trino regexp_extract/extract_all/split
regex = "1"
futures = "0.3"
tokio-util = "0.7"

# ── Dev profile: fast incremental builds ───────────────────────
[profile.dev]
# Line-tables only — enough for backtraces/panics, much less to generate.
debug = 1
# On macOS: skip dsymutil post-link step (no .dSYM bundle, separate dwarf files
# instead). Saves ~20-30% of link time on every rebuild.
split-debuginfo = "unpacked"

# ── Release profile: fast builds with good runtime performance ─
[profile.release]
codegen-units = 4        # More parallelism during codegen (default=1)
lto = "thin"             # Thin LTO: ~80% of full LTO benefit, much faster link
strip = true             # Strip debug symbols from binary (~50% smaller)
