[workspace]
resolver = "2"
members = [
    "crates/sqe-core",
    "crates/sqe-auth",
    "crates/sqe-catalog",
    "crates/sqe-sql",
    "crates/sqe-policy",
    "crates/sqe-planner",
    "crates/sqe-trino-functions",
    "crates/sqe-coordinator",
    "crates/sqe-worker",
    "crates/sqe-trino-compat",
    "crates/sqe-metrics",
    "crates/sqe-cli",
    "crates/sqe-bench",
    "xtask",
]
# Exclude vendored iceberg-rust — it has its own workspace.
# SQE references the crates via path deps, not workspace members.
exclude = ["vendor/iceberg-rust"]

[workspace.dependencies]
# Query engine — DataFusion 53 with hash join dynamic filters, LIMIT-aware pruning,
# 40x faster planning, nested field pushdown, and 42 function improvements.
datafusion = "53.1"
datafusion-expr = "53.1"
datafusion-proto = "53.1"

# Arrow 58 / Parquet 58 — aligned with DataFusion 53
arrow = { version = "58", features = ["prettyprint", "ipc_compression"] }
arrow-flight = { version = "58", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "58", features = ["lz4", "zstd"] }
arrow-schema = "58"
arrow-array = "58"
parquet = { version = "58", features = ["async", "object_store"] }
object_store = { version = "0.13", features = ["aws", "http", "azure", "gcp"] }

# Iceberg — RisingWave fork for rewrite_files() / overwrite_files() transaction support.
# RisingWave iceberg-rust fork with SQE's DF 53 / Arrow 58 rebase.
# Base: risingwavelabs/iceberg-rust dev_rebase_main_20260303 @ 645f02a4
# SQE delta: DataFusion 52->53, Arrow 57->58, Parquet 57->58
# Retains all RW fork features: RewriteFilesAction, PositionDeleteFileWriter,
# DeletionVectorWriter, OverwriteFilesAction, parallel manifest loading.
# Vendored in vendor/iceberg-rust/ — see vendor/iceberg-rust/README.md
iceberg = { path = "vendor/iceberg-rust/crates/iceberg" }
iceberg-catalog-rest = { path = "vendor/iceberg-rust/crates/catalog/rest", features = ["aws-sigv4"] }
iceberg-datafusion = { path = "vendor/iceberg-rust/crates/integrations/datafusion" }
# Optional catalog backends, vendored from upstream apache/iceberg-rust
# v0.9.0 alongside the RisingWave fork. Gated by cargo features in
# sqe-catalog so a default REST-only build does not pull in AWS SDK,
# Thrift, or sqlx weight.
iceberg-catalog-hms = { path = "vendor/iceberg-rust/crates/catalog/hms" }
iceberg-catalog-glue = { path = "vendor/iceberg-rust/crates/catalog/glue" }
iceberg-catalog-sql = { path = "vendor/iceberg-rust/crates/catalog/sql" }
# AWS S3 Tables (managed Iceberg). Vendored from risingwavelabs fork
# main; gated by sqe-catalog `s3tables` feature.
iceberg-catalog-s3tables = { path = "vendor/iceberg-rust/crates/catalog/s3tables" }
# Catalog factory dispatch. Loads any of the registered backends
# (rest / glue / s3tables / hms / sql) by string name with a uniform
# props HashMap. Replaces SQE's per-backend match dispatch.
# `default-features = false` so each backend feature in sqe-catalog
# (rest / glue / hms / sql / s3tables) controls which builders the
# loader registry actually includes; without this the upstream
# default pulls every backend's transitive AWS SDK / Thrift / sqlx
# weight unconditionally.
iceberg-catalog-loader = { path = "vendor/iceberg-rust/crates/catalog/loader", default-features = false }
sqlx = { version = "0.8.1", default-features = false }

# SQL parser — DataFusion 53 ships sqlparser 0.54. The `visitor` feature
# enables the VisitMut derive used by sqe-sql for AST rewrites
# (Trino-compat CAST(v AS JSON) -> to_json(v)).
sqlparser = { version = "0.54", features = ["visitor"] }

# JSON functions for DataFusion (Trino json_extract compat)
datafusion-functions-json = "0.53"

# Async — use only what is needed; avoid ["full"] which includes fs/process/io-std
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "net", "fs"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# gRPC (Arrow Flight) — arrow-flight 57 requires tonic 0.14
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Concurrency / Caching
dashmap = "6"
moka = { version = "0.12", features = ["future", "sync"] }

# Rate limiting
governor = "0.8"

# Auth
jsonwebtoken = "9"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.14"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace", "metrics", "logs"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Data generation
csv = "1"
rand = "0.8"

# Crypto
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# Misc
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
bytes = "1"

# Unicode normalization for Trino normalize() function
unicode-normalization = "0.1"
# Stemming for Trino word_stem() function
rust-stemmers = "1"
# Timezone support for with_timezone/at_timezone
chrono-tz = "0.10"
# Regex for Trino regexp_extract/extract_all/split
regex = "1"
futures = "0.3"
tokio-util = "0.7"

# Puffin NDV sketches — pure-Rust Apache DataSketches theta implementation.
# Used by `crates/sqe-catalog/src/puffin_stats.rs` to write theta sketches
# into Puffin sidecar files for the Iceberg statistics file list.
datasketches = "0.2"

# ── Dev profile: fast incremental builds ───────────────────────
[profile.dev]
# Line-tables only — enough for backtraces/panics, much less to generate.
debug = 1
# On macOS: skip dsymutil post-link step (no .dSYM bundle, separate dwarf files
# instead). Saves ~20-30% of link time on every rebuild.
split-debuginfo = "unpacked"

# ── Release profile: fast builds with good runtime performance ─
[profile.release]
codegen-units = 4        # More parallelism during codegen (default=1)
lto = "thin"             # Thin LTO: ~80% of full LTO benefit, much faster link
strip = true             # Strip debug symbols from binary (~50% smaller)

# ── Dev-release profile: optimized runtime, cheap compile ──────
# Use this for benchmark iteration (`cargo build --profile dev-release`).
# Drops thin-LTO (big RAM spike at link time) and cranks codegen-units
# (more parallelism, faster per-crate compile). Same opt-level as release
# so query perf is representative; binary is a bit larger and lacks the
# last few % of LTO-driven inlining.
[profile.dev-release]
inherits = "release"
lto = false              # Skip LTO — the link-time RAM peak is what
                         # pushes the machine into swap thrashing.
codegen-units = 16       # More parallel codegen per crate; faster wall time.
incremental = true       # Reuse artifacts across iterations — huge for loop work.
strip = false            # Keep symbols; benchmarks want readable traces.
