[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# xtask is a cargo convention for repo-local dev tooling.
# Invoke via `cargo xtask <subcommand>`. See `.cargo/config.toml` for the alias.

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
