[metadata]
name = dbt-sqe
version = attr: dbt.adapters.sqe.__version__.version
description = dbt adapter for SQE (Sovereign Query Engine) via ADBC Flight SQL
long_description = file: README.md
long_description_content_type = text/markdown
author = Jacob Verhoeks
license = Apache-2.0

[options]
install_requires =
    dbt-common>=1,<2
    dbt-adapters>=1.16,<2
    dbt-core>=1.8.0
    adbc-driver-flightsql>=0.10.0
    pyarrow>=14.0.0
python_requires = >=3.10
packages = find_namespace:
include_package_data = true

[options.packages.find]
include =
    dbt
    dbt.*
