[package]
name = "sqe-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
sqe-core = { path = "../sqe-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = "0.22"
