[package]
name = "sqe-auth"
version = "0.15.0"
edition = "2021"

[dependencies]
sqe-core = { path = "../sqe-core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
subtle = "2"
rand = { workspace = true }

[dev-dependencies]
