[package]
name = "sqe-ballista-poc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# 3-day vertical-slice PoC: validates ballista 53.0.0 can host SQE's
# iceberg + OIDC bearer-passthrough workload.  See
# `docs/superpowers/specs/2026-05-28-sqe-on-ballista-poc-plan.md`.

[dependencies]
ballista = "53.0.0"
ballista-core = "53.0.0"
datafusion = { workspace = true }
arrow = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
datafusion-proto = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Iceberg integration — same path-dep'd vendored set the rest of SQE uses.
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
iceberg-datafusion = { workspace = true }

[[bin]]
name = "sqe-ballista-poc"
path = "src/main.rs"
