[package]
name = "sqe-catalog"
version = "0.15.0"
edition = "2021"

[features]
# Default ships every supported catalog backend compiled in. Picking a
# backend is a runtime config concern, not a build-time one. Operators
# who need a slim image (or want to drop the AWS SDK weight) build with
# `--no-default-features --features rest` (or any subset).
#
# Approximate binary cost on top of a `rest`-only build: nessie adds 0
# (REST adapter, no new deps); hadoop adds ~0 (uses existing FileIO);
# sql-postgres ~5-10 MB; hms ~10-15 MB; glue ~50-80 MB (the AWS SDK is
# the heavyweight). Default release binary lands around 180-200 MB,
# which is fine for our Kubernetes deployments and matches Java stacks
# of similar scope.
default = ["rest", "sql-postgres", "hms", "glue", "hadoop"]
# REST catalog (the protocol Polaris and Nessie both speak). Always on
# in default; the flag exists so `--no-default-features --features rest`
# is a valid slim build.
rest = []
# JDBC-style SQL catalog. SQLite via rusqlite (existing helper) plus the
# upstream iceberg-catalog-sql crate which uses sqlx::any for runtime
# dispatch to SQLite/PostgreSQL/MySQL.
sql = ["dep:rusqlite", "dep:iceberg-catalog-sql", "dep:sqlx"]
# Add-on for `sql`: enable PostgreSQL via sqlx. Kept separate so the base
# `sql` feature does not pull tls-rustls + tokio-runtime + postgres driver
# into builds that only want SQLite.
sql-postgres = ["sql", "sqlx/postgres", "sqlx/runtime-tokio", "sqlx/tls-rustls"]
# Hadoop storage-only backend. No extra dependency — the backend scans a
# warehouse path via `object_store`, which is already linked.
hadoop = []
# Hive Metastore over Thrift. Vendored from apache/iceberg-rust v0.9.0;
# pulls in volo-thrift + pilota only when this feature is enabled.
hms = ["dep:iceberg-catalog-hms"]
# AWS Glue Data Catalog. Vendored from apache/iceberg-rust v0.9.0;
# pulls in aws-sdk-glue + aws-config only when this feature is enabled.
glue = ["dep:iceberg-catalog-glue"]

[dependencies]
sqe-core = { path = "../sqe-core" }
sqe-policy = { path = "../sqe-policy" }
sqe-metrics = { path = "../sqe-metrics" }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-rest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
moka = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
iceberg-datafusion = { workspace = true }
parquet = { workspace = true }
bytes = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
# Puffin NDV sketches (apache-datasketches-theta-v1 blob body).
datasketches = { workspace = true }
# Optional backend dependencies — gated by the corresponding cargo feature
# above. None of these are pulled into a default `cargo build`.
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
iceberg-catalog-hms = { workspace = true, optional = true }
iceberg-catalog-glue = { workspace = true, optional = true }
iceberg-catalog-sql = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
sqe-auth = { path = "../sqe-auth" }
